fix: format html + lots wrap

--- a/styles/style.css
+++ b/styles/style.css
@@ -156,16 +156,14 @@
 }
 
 .lots__card-list {
-  display: flex;
-  flex-wrap: no-wrap;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   gap: 25px;
   list-style: none;
   margin-bottom: 30px;
 }
 
 .lots__card-list-item {
-  flex-grow: 1;
-  width: 430px;
   min-height: 450px;
 }
 
